--- a/package.json
+++ b/package.json
@@ -1,27 +1,37 @@
 {
   "name": "test-task-dzen",
-  "version": "0.1.0",
+  "version": "1.0",
   "private": true,
+  "type":"module",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev:next": "next dev --turbopack",
+    "ws:server": "node server.js",
+    "dev": "concurrently -k \"npm run dev:next\" \"npm run ws:server\"",
     "build": "next build",
-    "start": "next start",
+    "start:next": "next start",
+    "start": "concurrently -k \"npm run start:next\" \"npm run ws:server\"",
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
+    "@types/react-redux": "^7.1.34",
+    "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.0"
+    "react-redux": "^9.2.0",
+    "uuid": "^11.1.0",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "concurrently": "^9.1.2",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
