--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "test-task-dzen",
   "version": "1.0",
   "private": true,
-  "type":"module",
+  "type": "module",
   "scripts": {
     "dev:next": "next dev --turbopack",
     "ws:server": "node server.js",
@@ -15,12 +15,14 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
     "@types/react-redux": "^7.1.34",
+    "formik": "^2.4.6",
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "uuid": "^11.1.0",
-    "ws": "^8.18.1"
+    "ws": "^8.18.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
