--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
+    "reselect": "^5.1.1",
     "uuid": "^11.1.0",
     "ws": "^8.18.1",
     "yup": "^1.6.1"
